--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Oinur/resume",
+  "homepage": "https://oinur.github.io/Oinur/resume",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
