--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "homepage": "https://oinur.github.io/Oinur/resume",
+  
   "name": "resume",
+  "homepage": "https://oinur.github.io/resume",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,13 +21,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
